# srsnn

./: .gitignore  Cargo.toml  README.md
benches/: benchmarks.rs
config/: default.toml  xor.toml
csa/: Cargo.toml
csa/src/: lib.rs  mask.rs  op.rs
evolution/: Cargo.toml
evolution/src/: algorithm.rs  config.rs  evolvable.rs  genome.rs  graph_genome.rs  lib.rs  parameters.rs  population.rs  stats.rs
evolution/src/algorithm/: nes.rs  snes.rs
evolution/src/genome/: matrix_genome.rs  pool_genome.rs
model/: Cargo.toml
model/src/: lib.rs  network.rs  neuron.rs  record.rs  spikes.rs  synapse.rs
model/src/network/: builder.rs  description.rs  representation.rs  runnable.rs
model/src/neuron/: izhikevich.rs  lapicque.rs
model/src/synapse/: basic.rs  bi_exponential.rs  exponential.rs  linear_synapse.rs  matrix_synapse.rs  representation.rs
plot/: etc.py  network.py  parser.py  plot.py
src/: analysis.rs  config.rs  csa.rs  eval.rs  evaluate.rs  evolution.rs  experiment.rs  gen.rs  izhikevich.rs  lib.rs  logger.rs  main.rs  model.rs  models.rs  network.rs  optimization.rs  phenotype.rs  plots.rs  pools.rs  population.rs  process.rs  record.rs  runnable.rs  stochastic.rs  synapses.rs  task_executor.rs  task_runner.rs  utils.rs  visual.rs
src/eval/: config.rs  setups.rs  trial.rs
src/evolution/: genome.rs  phenotype.rs
src/model/: izhikevich.rs  neuron.rs  spikes.rs  synapse.rs
src/model/neuron/: izhikevich.rs
src/model/synapse/: linear_synapse.rs  matrix_synapse.rs
src/models/: generator.rs  generator_model.rs  matrix.rs  plain.rs  rsnn.rs  srsnn.rs  stochastic.rs
src/models/generator/: base.rs  config.rs  ed.rs  edd_base.rs  er.rs  ex1_ablation.rs  typed_uniform.rs  udd_base.rs  uniform.rs  utd_base.rs
src/models/srsnn/: base_model.rs  er_model.rs  gt_model.rs  minimal.rs  test_model.rs  typed.rs
src/models/stochastic/: base_model.rs  main_model.rs  random_model.rs
src/process/: default.rs  experiment.rs  hyper.rs  optimize.rs  test.rs
src/process/experiment/: report.rs
src/visual/: plots.rs  window.rs
tasks/: Cargo.toml
tasks/src/: catching_task.rs  cognitive_task.rs  energy_task.rs  lib.rs  lorenz_task.rs  main.rs  mnist_task.rs  movement_task.rs  multipattern.rs  pattern.rs  pattern_similarity.rs  pattern_task.rs  pole_balancing_task.rs  sensor.rs  survival_task.rs  task_runner.rs  testing.rs  time_series.rs  xor_task.rs
tests/: evolution.rs  network.rs  optimizers.rs  pools.rs
utils/: Cargo.toml
utils/src/: analysis.rs  config.rs  data.rs  encoding.rs  environment.rs  lib.rs  logger.rs  math.rs  parameters.rs  random.rs
visual/: Cargo.toml
visual/src/: fg.rs  lib.rs  main.rs  plots.rs  task_window.rs  tasks.rs  window.rs
visual/src/tasks/: catching.rs  movement.rs  pole_balancing.rs  survival.rs
