[package]
name = "luna"
version = "0.1.0"
edition = "2021"
default-run = "luna"

[dependencies]
rand = "0.8.5"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
plotters = "0.3.3"
once_cell = "1.19.0"
log = "0.4.21"
env_logger = "0.11.3"
model = {path = "model"}
tasks = {path = "tasks"}

[dependencies.sdl2]
version = "0.36"
default-features = false
features = ["gfx"]

[workspace]
members = ["model", "tasks"]
