[package]
name = "luna"
version = "0.1.0"
edition = "2021"
default-run = "luna"

[dependencies]
model = {path = "model"}
evolution = {path = "evolution"}
tasks = {path = "tasks"}
utils = {path = "utils"}
visual = {path = "visual", optional = true}

rand = "0.8.5"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
plotters = "0.3.3"
once_cell = "1.19.0"
log = "0.4.21"
env_logger = "0.11.3"
config = "0.14.0"
serde = "1.0.198"
ctrlc = "3.4.4"
rayon = "1.10.0"
crossbeam = "0.8.4"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[workspace]
members = [ "evolution", "model", "tasks", "utils", "visual" ]

[features]
viz = ["visual"]

[[bin]]
name = "viz"
required_features = [ "viz" ]

[[bench]]
name = "benchmarks"
harness = false
