[package]
name = "srsnn"
version = "0.1.5"
edition = "2021"
default-run = "srsnn"

[dependencies]
csa = {path = "csa"}
model = {path = "model"}
evolution = {path = "evolution"}
tasks = {path = "tasks"}
utils = {path = "utils"}
visual = {path = "visual"}

rand = "0.8.5"
ndarray = { version = "0.15.6", features = ["serde"] }
ndarray-rand = "0.14.0"
plotters = "0.3.3"
once_cell = "1.19.0"
log = "0.4.21"
env_logger = "0.11.3"
config = "0.14.0"
serde = "1.0.198"
ctrlc = "3.4.4"
crossbeam = "0.8.4"
petgraph = "0.6.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
whittaker-eilers = "0.1.3"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[workspace]
members = [ "csa", "evolution", "model", "tasks", "utils", "visual" ]

[[bench]]
name = "benchmarks"
harness = false
