[package]
name = "model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
ndarray = { version = "0.15.6", features = ["serde"] }
ndarray-rand = "0.14.0"
log = "0.4.21"
env_logger = "0.11.3"
petgraph = "0.6.5"
utils = { path= "../utils" }
serde = { version = "1.0", features = ["derive"] }
num = "0.4.3"
num-traits = "0.2.19"
