[package]
name = "visual"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
plotters = "0.3.3"
log = "0.4.21"
model = { path = "../model" }
tasks = { path = "../tasks" }
utils = { path = "../utils" }

[dependencies.sdl2]
version = "0.36"
default-features = false
features = ["gfx"]
